fix logo alignment

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ body {
 	font-size: large;
 	font-weight: normal;
 	padding: 8px;
+	mix-blend-mode: overlay;
 	text-decoration: none;
 }
 
@@ -49,8 +50,8 @@ body {
 	color: white;
 }
 
-.cityList li a .Active {
-	color: rgb(35, 0, 133);
+.cityList li a.Active {
+	mix-blend-mode: normal;
 	font-weight: bold;
 }
 
@@ -98,6 +99,7 @@ body {
 	font-size: 50px;
 }
 
+/***
 .WeatherIcon {
 	display: flex;
 	align-items: center;
@@ -105,4 +107,12 @@ body {
 	justify-content: center;
 	text-align: center;
 	background: none;
+}
+***/
+
+.WeatherIcon {
+	display: flex;
+	float: right;
+	font-size: 100px;
+	margin-top: -50px;
 }
